# ralph-orchestrator

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_ACCEPTANCE_CRITERIA.yaml  CONTRIBUTING.md  Cargo.toml  README.md  datetime_printer.py  goodbye.py  greeting.py  hello.py  hello_world.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  ralph.yml
.eval/: .gitignore
.eval-sandbox/: .gitignore
.planning/: BRIEF.md  CLAUDE.md  ROADMAP.md  UNDERSTANDING.md
.sops/: code-assist.sop.md  code-task-generator.sop.md
crates/ralph-bench/: Cargo.toml
docs/: ACE_LEARNING_ANALYSIS.md  APPROACH_5_HYBRID_NOVEL_SOLUTIONS.md  CONTEXT_OPTIMIZATION_EXPERIMENT.md  index.md
examples/: cli_tool.md  hn_scraper.py  mobile.yml  orchestration.yml  ralph-self-improvement.yml  simple-task.md  simple_function.md  statistics_helper.py  test_statistics_helper.py  web-api.md  web_scraper.md
ios/: .gitignore  AGENTS.md  APP_ICON_SPEC.md  BACKEND-AUTO-START-SUMMARY.md  ICON_GENERATION_INSTRUCTIONS.md  INSTALLATION-CHECKLIST.md  PROGRAMMATIC-NAVIGATION.md  QUICK-START.md  README.md  add_phase8_files.rb  add_v5_files.rb  generate_icons.py  project.yml
plans/: 260110-ace-monitoring-comprehensive-implementation.md  ace-learning-REVISED-PLAN.md  ace-learning-loop-integration.md
prompts/: ONBOARDING_PROMPT.md  SELF_IMPROVEMENT_PROMPT.md  VALIDATION_FEATURE_PROMPT.md  VALIDATION_PROPOSAL_PROMPT.md
ralph-mobile/: .gitignore  app.json  jest.setup.js  package-lock.json  package.json  tailwind.config.js
scripts/: CLAUDE.md  monitor.sh  ralph-with-monitor.sh  (+9 more)
(+530 files in other folders)
