[package]
name = "ralph-bench"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Benchmark harness for Ralph Orchestrator"
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[[bin]]
name = "ralph-bench"
path = "src/main.rs"

[dependencies]
ralph-proto.workspace = true
ralph-core.workspace = true
ralph-adapters.workspace = true

tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
